test/spec_vectors/i32/fail/module_8.wat
(module (func $type-unary-operand-empty-in-br_table (i32.const 0) (block (br_table 0 (i32.eqz)) (drop))))